sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:4: error: ':' expected but ')' found.
  def gCrepeF(n){
               ^BasicPancake:14: error: identifier expected but '}' found.
} 
^